--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     </div>
   
-    <div class="attribution">
+<!--     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Saed Ahmed</a>.
-    </div>
+    </div> -->
 </body>
 </html>
